<resources>
    <string name="app_name">Indoor-Locator</string>
    <string name="user_location_permission_explanation">To create your building, please allow location service.</string>
    <string name="user_location_permission_not_granted">User Location Permission not granted</string>
    <string name="your_building_name_label">Building name</string>
    <string name="your_building_latitude_label">Building latitude (please pick location through map)</string>
    <string name="your_building_longitude_label">Building longitude (please pick location through map)</string>
    <string name="your_building_find_on_map_label">Pick your building location on map</string>
    <string name="selected_place_info">Select_Place_Info</string>
    <string name="go_to_picker_activity">Go to picker activity</string>
    <string name="new_building_submit">Create New Building</string>

    <string name="new_room_submit">Create New Room</string>
    <string name="your_room_name_label">Room Name</string>
    <string name="your_room_floor_label">Room Floor</string>
    <string name="train_model_button_building_list">Train</string>
    <string name="train_model_button_train_fragment">Train</string>

    <!--<string name="URL_BUILDING">http://10.0.3.2:5000/building</string>-->
    <!--<string name="URL_ROOM">http://10.0.3.2:5000/room</string>-->
    <!--<string name="URL_TRAIN">http://10.0.3.2:5000/train</string>-->
    <!--<string name="URL_SCAN">http://10.0.3.2:5000/scan</string>-->
    <!--<string name="URL_PREDICT">http://10.0.3.2:5000/predict</string>-->
    <!--<string name="verify_user_URL">http://10.0.3.2:5000/user/verify</string>-->
    <!--<string name="create_user_URL">http://10.0.3.2:5000/user/new</string>-->
    <!--<string name="update_password_URL">http://10.0.3.2:5000/user/update</string>-->


    <string name="URL_BUILDING">http://10.0.2.2:5000/building</string>
    <string name="URL_ROOM">http://10.0.2.2:5000/room</string>
    <string name="URL_TRAIN">http://10.0.2.2:5000/train</string>
    <string name="URL_SCAN">http://10.0.2.2:5000/scan</string>
    <string name="URL_PREDICT">http://10.0.2.2:5000/predict</string>
    <string name="verify_user_URL">http://10.0.2.2:5000/user/verify</string>
    <string name="create_user_URL">http://10.0.2.2:5000/user/new</string>
    <string name="update_password_URL">http://10.0.2.2:5000/user/update</string>

    <!--<string name="URL_BUILDING">http://localhost:5000/building</string>-->
    <!--<string name="URL_ROOM">http://127.0.0.1:5000/room</string>-->
    <!--<string name="URL_TRAIN">http://127.0.0.1:5000/train</string>-->
    <!--<string name="URL_SCAN">http://127.0.0.1:5000/scan</string>-->
    <!--<string name="URL_PREDICT">http://127.0.0.1:5000/predict</string>-->
    <!--<string name="verify_user_URL">http://localhost:5000/user/verify</string>-->
    <!--<string name="create_user_URL">http://127.0.0.1:5000/user/new</string>-->
    <!--<string name="update_password_URL">http://127.0.0.1:5000/user/update</string>-->

    <!--<string name="URL_BUILDING">http://10.20.13.4:5000/building</string>-->
    <!--<string name="URL_ROOM">http://10.20.13.4:5000/room</string>-->
    <!--<string name="URL_TRAIN">http://10.20.13.4:5000/train</string>-->
    <!--<string name="URL_SCAN">http://10.20.13.4:5000/scan</string>-->
    <!--<string name="URL_PREDICT">http://10.20.13.4:5000/predict</string>-->
    <!--<string name="CREATE_USER_URL">http://10.20.13.4:5000/user/new</string>-->
    <!--<string name="verify_user_URL">http://10.20.13.4:5000/user/verify</string>-->
    <!--<string name="create_user_URL">http://10.20.13.4:5000/user/new</string>-->
    <!--<string name="update_password_URL">http://10.20.13.4:5000/user/update</string>-->

    <string name="room_collect_instruction">Instruction:\nPlease move around the selected room while scanning.\nMake sure the edges of the room, as well as the interier of the room are all scaned.\n\n</string>
    <string name="room_collect_button">Collect</string>
    <string name="prediction_button">Predict</string>
    <string name="title_activity_user_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view">Original</string>
    <string name="login_email_label">Email</string>
    <string name="login_button">Login</string>
    <string name="login_password_label">Password</string>
    <string name="signup_button">Sign up</string>
    <string name="settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="train">Train</string>
    <string name="title_activity_settings">Settings</string>
    <string name="field_empty">Field is Empty</string>
    <string name="wrong_oldpass">Old password is wrong</string>
    <string name="passwords_dont_match">Password does not match</string>
    <string name="predict">Locate Me</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="apply">Apple Changes</string>
    <string name="cancel">Cancel</string>
    <string name="user_name">User Name</string>


</resources>
