<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSignupFragment">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:background="@drawable/background_gradient"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <ImageView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />



</LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/signup_username"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:ems="10" />


        <EditText
            android:id="@+id/signup_email"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_email_label"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/signup_password"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_password_label"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signup_confirmPassword"
            android:drawablePadding="20dp"
            android:drawableRight="@drawable/ic_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible"
            android:textColor="#FF0000"
            android:gravity="center"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageVIew"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/layoutInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="32dp"
        android:padding="5dp"
        android:src="@drawable/ic_app_icon_2" />


</RelativeLayout>